--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         </activity>
         <activity android:name=".view.activity.RegisterActivity" />
         <activity android:name=".view.activity.DashboardActivity" />
-        <activity android:name=".view.activity.ForgetPasswordActivity"></activity>
+        <activity android:name=".view.activity.ForgetPasswordActivity" />
+        <activity android:name=".view.activity.UserBookActivity"></activity>
     </application>
 
 </manifest>
